--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -153,6 +153,7 @@ h3 {
   @import "components/checkbox";
   @import "components/radio";
   @import "components/input";
+  @import "components/field-message";
   @import "components/divider";
   @import "components/range-slider";
   @import "components/header";
