--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/order/info/buttons.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/order/info/buttons.phtml
@@ -19,7 +19,7 @@ use Magento\Sales\Block\Order\Info\Buttons;
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
 ?>
-<div class="flex items-center flex-wrap gap-4 md:gap-x-3 mt-6 md:my-0">
+<div class="flex items-center flex-wrap gap-4 md:gap-x-3 mt-7 md:my-0">
     <?php $order = $block->getOrder() ?>
     <?php if ($this->helper(\Magento\Sales\Helper\Reorder::class)->canReorder($order->getEntityId())): ?>
         <?php $formData = json_decode(
@@ -35,14 +35,14 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         >
             <?= $block->getBlockHtml('formkey'); ?>
             <input type="hidden" name="data" value='<?= /** @noEscape */ json_encode($formData['data']) ?>'/>
-            <button type="submit" class="border border-primary-700 px-4 py-3 rounded-xl text-primary-700 flex items-center gap-3">
+            <button type="submit" class="border border-primary-700 px-6 py-4 rounded-sm text-primary-700 flex items-center gap-3">
                 <?= $hyvaicons->renderHtml('refresh', 'text-lg') ?>
                 <span><?= $escaper->escapeHtml(__('Reorder')) ?></span>
             </button>
         </form>
     <?php endif ?>
     <a href="<?= $escaper->escapeUrl($block->getPrintUrl($order)) ?>"
-       class="border border-primary-700 px-4 py-3 rounded-xl text-primary-700 flex items-center gap-3"
+       class="border border-primary-700 px-6 py-4 rounded-sm text-primary-700 flex items-center gap-3"
        target="_blank"
        rel="noopener">
         <?= $hyvaicons->renderHtml('print', 'text-lg') ?>
