--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/order/view.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/order/view.phtml
@@ -14,13 +14,13 @@ $giftMessageHelper = $this->helper(Message::class);
 
 $order = $block->getOrder();
 ?>
-<div class="md:flex md:justify-between md:flex-wrap md:gap-4 items-center mb-4">
+<div class="md:flex md:justify-between md:flex-wrap md:gap-4 items-center mb-5">
     <div class="lg:flex items-center md:text-left">
         <div class="lg:inline-block">
-            <div class="text-lg font-bold"><?= $escaper->escapeHtml(__('Order # %1', $order->getRealOrderId())) ?></div>
+            <div class="text-lg font-bold mb-2"><?= $escaper->escapeHtml(__('Order # %1', $order->getRealOrderId())) ?></div>
             <?= $block->getChildHtml('order.date') ?>
         </div>
-        <div class="mt-6 md:mt-0 lg:inline-block lg:ml-6">
+        <div class="mt-7 md:mt-0 lg:inline-block lg:ml-7">
             <?= $block->getChildHtml('order.status') ?>
         </div>
     </div>
@@ -30,12 +30,11 @@ $order = $block->getOrder();
         <?= $block->getChildHtml('sales.shipment.buttons') ?>
     <?php endif; ?>
 </div>
-<div class="order-details-items ordered bg-white rounded-xl p-4 md:p-6">
+<div class="order-details-items ordered bg-white rounded-xl p-5 md:p-7">
     <div class="card">
         <div>
             <?= $block->getChildHtml('sales.order.info') ?>
         </div>
-
 
         <?= $block->getChildHtml('order.comments') ?>
 
@@ -73,7 +72,7 @@ $order = $block->getOrder();
         <?php endif; ?>
     </div>
 </div>
-<div class="ml-4 mt-7 text-sm">
+<div class="ml-5 mt-7">
     <a class="text-primary-700" href="<?= $escaper->escapeUrl($block->getBackUrl()) ?>">
         <span><?= $escaper->escapeHtml($block->getBackTitle()) ?></span>
     </a>
