INTERNAL-48; remove messages.phtml, and remove mb-16 class

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
@@ -41,7 +41,7 @@ $isAutocompleteEnabled = $block->getConfig('customer/password/autocomplete_on_st
 ?>
 
 <div class="container mx-auto flex h-full items-center px-5">
-    <div class="mx-auto mb-16 w-[412px] max-w-full">
+    <div class="mx-auto w-[412px] max-w-full">
         <header class="flex items-center justify-between sm:text-center mb-7">
             <h2 class="w-full text-2xl" tabindex="-1"><?= __('Create account') ?></h2>
         </header>
