--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/widget/name.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/widget/name.phtml
@@ -10,6 +10,7 @@ use Magento\Framework\Escaper;
 $prefix = $block->showPrefix();
 $middle = $block->showMiddlename();
 $suffix = $block->showSuffix();
+$fieldMessages = $block->getFieldMessages();
 ?>
 <?php if ($prefix): ?>
     <div class="field field-reserved">
@@ -44,6 +45,9 @@ $suffix = $block->showSuffix();
                 </select>
             <?php endif; ?>
         </div>
+        <?php if (!empty($fieldMessages['prefix'])): ?>
+            <div class="text-error"><?= $escaper->escapeHtml($fieldMessages['prefix']) ?></div>
+        <?php endif; ?>
     </div>
 <?php endif; ?>
     <div class="field field-reserved">
@@ -64,6 +68,9 @@ $suffix = $block->showSuffix();
                 <?= ($block->getAttributeValidationClass('firstname') == 'required-entry') ? ' required' : '' ?>
             >
         </div>
+        <?php if (!empty($fieldMessages['firstname'])): ?>
+            <div class="text-error"><?= $escaper->escapeHtml($fieldMessages['firstname']) ?></div>
+        <?php endif; ?>
     </div>
 <?php if ($middle): ?>
     <?php $isMiddlenameRequired = $block->isMiddlenameRequired(); ?>
@@ -84,6 +91,9 @@ $suffix = $block->showSuffix();
                 <?= $isMiddlenameRequired ? ' required' : '' ?>
             >
         </div>
+        <?php if (!empty($fieldMessages['middlename'])): ?>
+            <div class="text-error"><?= $escaper->escapeHtml($fieldMessages['middlename']) ?></div>
+        <?php endif; ?>
     </div>
 <?php endif; ?>
     <div class="field field-reserved">
@@ -104,6 +114,9 @@ $suffix = $block->showSuffix();
                 <?= ($block->getAttributeValidationClass('lastname') == 'required-entry') ? ' required' : '' ?>
             >
         </div>
+        <?php if (!empty($fieldMessages['lastname'])): ?>
+            <div class="text-error"><?= $escaper->escapeHtml($fieldMessages['lastname']) ?></div>
+        <?php endif; ?>
     </div>
 <?php if ($suffix): ?>
     <div class="field field-reserved">
