INTERNAL-66; replace fetchAndReplaceContent() with x-element-transition-trigger attr

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/newsletter.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/newsletter.phtml
@@ -72,7 +72,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
             </button>
             <a class="button button--ghost-primary"
                href="<?= $escaper->escapeUrl($block->getBackUrl()) ?>"
-               @click.prevent="fetchAndReplaceContent('<?= $escaper->escapeUrl($block->getBackUrl()) ?>')"
+               x-element-transition-trigger
             >
             <span>
                 <?= $escaper->escapeHtml(__('Go back')) ?>
