--- a/app/design/frontend/Satoshi/Hyva/Magento_LoginAsCustomerAssistance/templates/shopping-assistance.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LoginAsCustomerAssistance/templates/shopping-assistance.phtml
@@ -85,7 +85,7 @@ if (!$shoppingAssistanceViewModel->isLoginAsCustomerEnabled()) {
         <div class="relative" x-cloak x-show="showTooltip">
             <div class="shadow-lg">
                 <div class="absolute top-0 left-0 z-10 w-64 p-2 -mt-6 text-sm leading-tight text-black transform
-                    -translate-x-full md:-translate-x-1/3 -translate-y-full bg-white rounded-lg shadow-lg p-4">
+                    -translate-x-full md:-translate-x-1/3 -translate-y-full bg-bg-400 rounded-lg shadow-lg p-4">
                     <span
                         class="subtitle text-base"
                         id="assistance_allowed_checkbox_tooltip"
