INTERNAL-66; remove text-[14px] class from checkbox's label

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/newsletter.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/newsletter.phtml
@@ -52,7 +52,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                 <span class="checkbox__control w-5 h-5" aria-hidden="true">
                 <?= $hyvaicons->renderHtml('checkmark') ?>
             </span>
-                <span class="checkbox__label text-[14px] ml-0">
+                <span class="checkbox__label ml-0">
                 <?= $escaper->escapeHtml(__('General Subscription')) ?>
             </span>
             </label>
