INTERNAL-17; remove text-[14px] class from checkbox's label

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/edit.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/edit.phtml
@@ -70,7 +70,7 @@ $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocom
             <span class="checkbox__control w-5 h-5" aria-hidden="true">
                 <?= $hyvaicons->renderHtml('checkmark') ?>
             </span>
-            <span class="checkbox__label text-[14px] ml-0"><?= $escaper->escapeHtml(__('Change email')) ?></span>
+            <span class="checkbox__label ml-0"><?= $escaper->escapeHtml(__('Change email')) ?></span>
             <span class="sr-only"
                   id="change_email_description"><?= $escaper->escapeHtml(__('form appears when field is selected')) ?></span>
         </label>
@@ -90,7 +90,7 @@ $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocom
             <span class="checkbox__control w-5 h-5" aria-hidden="true">
                 <?= $hyvaicons->renderHtml('checkmark') ?>
             </span>
-            <span class="checkbox__label text-[14px] ml-0"><?= $escaper->escapeHtml(__('Change password')) ?></span>
+            <span class="checkbox__label ml-0"><?= $escaper->escapeHtml(__('Change password')) ?></span>
             <span class="sr-only"
                   id="change_password_description"><?= $escaper->escapeHtml(__('form appears when field is selected')) ?></span>
         </label>
