--- a/app/design/frontend/Satoshi/Hyva/Magento_LoginAsCustomerAssistance/templates/shopping-assistance.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LoginAsCustomerAssistance/templates/shopping-assistance.phtml
@@ -60,7 +60,7 @@ if (!$shoppingAssistanceViewModel->isLoginAsCustomerEnabled()) {
         <span class="checkbox__control w-5 h-5" aria-hidden="true">
             <?= $hyvaicons->renderHtml('checkmark') ?>
         </span>
-        <span class="checkbox__label text-[14px] ml-0"><?= $escaper->escapeHtml(__($shoppingAssistanceViewModel->getAssistanceCheckboxTitle())) ?></span>
+        <span class="checkbox__label ml-0"><?= $escaper->escapeHtml(__($shoppingAssistanceViewModel->getAssistanceCheckboxTitle())) ?></span>
     </label>
     <input type="hidden"
            name="assistance_allowed"
